# ChangeLog for dev-perl/DBD-SQLite
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.69 2009/11/19 11:26:13 tove Exp $

  19 Nov 2009; Torsten Veller <tove@gentoo.org> DBD-SQLite-0.31-r1.ebuild:
  Fix SRC_URI

*DBD-SQLite-1.25 (01 May 2009)

  01 May 2009; Torsten Veller <tove@gentoo.org> +DBD-SQLite-1.25.ebuild:
  Version bump (#266828)

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -DBD-SQLite-1.12.ebuild,
  -DBD-SQLite-1.13.ebuild:
  Cleanup

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBD-SQLite-1.14.ebuild:
  keyword ~sparc-fbsd

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> DBD-SQLite-1.14.ebuild:
  keyword ~x86-fbsd

  03 Mar 2008; Christoph Mende <angelos@gentoo.org> DBD-SQLite-1.14.ebuild:
  Stable on amd64, bug #204222

  25 Feb 2008; Jeroen Roovers <jer@gentoo.org> DBD-SQLite-1.14.ebuild:
  Stable for HPPA (bug #204222).

  15 Feb 2008; nixnut <nixnut@gentoo.org> DBD-SQLite-1.14.ebuild:
  Stable on ppc wrt bug 204222

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> DBD-SQLite-1.14.ebuild:
  Stable on ppc64

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> DBD-SQLite-1.14.ebuild:
  alpha/ia64/sparc/x86 stable

*DBD-SQLite-1.14 (09 Dec 2007)

  09 Dec 2007; Yuval Yaari <yuval@gentoo.org> +DBD-SQLite-1.14.ebuild:
  Version bump (bug #201636)

  14 Aug 2007; Christian Hartmann <ian@gentoo.org> +DBD-SQLite-1.12.ebuild:
  Resurrect 1.12; bug #188811

  06 May 2007; Christian Hartmann <ian@gentoo.org>
  +DBD-SQLite-0.31-r1.ebuild:
  Readding 0.31 for net-proxy/vultureng dep

  05 May 2007; Christian Hartmann <ian@gentoo.org>
  -files/sparc-DBD-SQLite-1.06.patch, -DBD-SQLite-0.31-r1.ebuild,
  -DBD-SQLite-1.07.ebuild, -DBD-SQLite-1.08.ebuild, -DBD-SQLite-1.11.ebuild,
  -DBD-SQLite-1.12.ebuild:
  Cleanup

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> DBD-SQLite-1.13.ebuild:
  Stable on ppc64
