@@ -1,6 +1,8 @@
 DIST DBD-SQLite-1.14.tar.gz 703380 RMD160 07616d3db7de55134588fca7dff3dec5091ffc77 SHA1 68e13a5f1ba1249962930140a0b0e3b587401ab7 SHA256 44189d373a77eeb8a5353e0cd88bff04dde6e611678abdc6834c80d35d2f0d07
 DIST DBD-SQLite-1.25.tar.gz 1102688 RMD160 f608d81c2765ec179468c96118c4ce463651181f SHA1 54a29d97c4d220b204817f1301fb7ce0f964e95c SHA256 832c1f9a73d02586a93a05415f97c28980a50323e7698af318730a076502ad9d
+DIST DBD-SQLite-1.27.tar.gz 1207818 RMD160 1544d45483faaccebafcca77b378c35014be2b99 SHA1 86cf772505009252d9e1239d8caab37ffc353c05 SHA256 61fc5100a23dedccc6cb769f57da1e9682f47ac4fbf3414b6991b733af8287be
 EBUILD DBD-SQLite-1.14.ebuild 654 RMD160 b1f56670ad4df389ada2bc8f43e3cf159783bf01 SHA1 12e2045bd0b5cceae780007e02fea6039d4ee4c2 SHA256 0ba76ec9feffe31230e6fc55085c25f131670581bed4512f1f046d9f72128888
 EBUILD DBD-SQLite-1.25.ebuild 503 RMD160 f380878f4fe1883904795f974831cadcd060af78 SHA1 988ab23231d4ca5bfa129f53875325ae49de5025 SHA256 9176c19717ac41d0bb427d886c6f0cd22d8a9268f33317420a179a553569817b
-MISC ChangeLog 9193 RMD160 261077242f19461b451004f7d89ab6e7ea95a348 SHA1 0ab6878dc767ba407aa9684786c79e5657c6dd6b SHA256 fac7bc351b9422a11f274991f6ba2e67599d575423afdd130f56ff9b42d9ae5f
+EBUILD DBD-SQLite-1.27.ebuild 506 RMD160 6f5625819984b1a385159305a0c055e6ac594b51 SHA1 e73513793d4a9fef8403fc8414c398de0ff03a65 SHA256 297e7391c24167f80408378643406a602c1983fc22019e735f3d6f54e2cec949
+MISC ChangeLog 9357 RMD160 baafe9307fdb0f1e28810c843ec271d17ea0951f SHA1 9bf4cf7d1d0040fd8db500f1359e4baf8dfa575c SHA256 92b9be6b1cc1f20fe8e555a59e5482619506c39ce88bf9e6ac2dee6f33206ccd
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
