@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DBD-SQLite
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.69 2009/11/19 11:26:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.70 2009/11/24 07:40:51 robbat2 Exp $
+
+*DBD-SQLite-1.27 (24 Nov 2009)
+
+  24 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +DBD-SQLite-1.27.ebuild:
+  Version bump via perl-bump experimental tool.
 
   19 Nov 2009; Torsten Veller <tove@gentoo.org> DBD-SQLite-0.31-r1.ebuild:
   Fix SRC_URI
